--- a/src/stylesheets/Ticket.css
+++ b/src/stylesheets/Ticket.css
@@ -3,7 +3,7 @@
   border-radius: 8px;
   box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
   width: 85%;
-  padding: 20px;
+  padding: 10px;
   margin: 5px;
   transition: transform 0.2s;
   border-style: solid;
